@@ -3845,6 +3845,8 @@ public class FSNamesystem implements Namesystem, FSNamesystemMBean,
             throw new IOException("Block (=" + oldBlock + ") not found");
           }
         }
+        final long oldGenerationStamp = storedBlock.getGenerationStamp();
+        final long oldNumBytes = storedBlock.getNumBytes();
         //
         // The implementation of delete operation (see @deleteInternal method)
         // first removes the file paths from namespace, and delays the removal
@@ -3905,8 +3907,6 @@ public class FSNamesystem implements Namesystem, FSNamesystemMBean,
           }
           iFile.recomputeFileSize();
           // find the DatanodeDescriptor objects
-          // There should be no locations in the blockManager till now because the
-          // file is underConstruction
           ArrayList<DatanodeDescriptor> trimmedTargets = new ArrayList<>(newTargets.length);
           ArrayList<String> trimmedStorages = new ArrayList<>(newTargets.length);
 
@@ -3943,6 +3943,10 @@ public class FSNamesystem implements Namesystem, FSNamesystemMBean,
             iFile.setLastBlock(truncatedBlock, trimmedStorageInfos);
           } else {
             iFile.setLastBlock(storedBlock, trimmedStorageInfos);
+            if (closeFile) {
+              blockManager.markBlockReplicasAsCorrupt(storedBlock,
+                  oldGenerationStamp, oldNumBytes, trimmedStorageInfos);
+            }
           }
         }
 
